--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon",
+    "test": "cross-env DB_ENV=testing jest --watch",
     "start": "node index.js"
   },
   "repository": {
@@ -31,6 +32,9 @@
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2",
+    "cross-env": "^5.2.1",
+    "jest": "^24.9.0"
   }
 }
